--- a/.env.mcp
+++ b/.env.mcp
@@ -1,3 +1,3 @@
 # Configuración de Supabase para MCP
-SUPABASE_ACCESS_TOKEN=sbp_c0e1d0a6abc9a8b6a515461482a03ec8125abd4e
-SUPABASE_PROJECT_REF=nuqfiwtcoeeutnnjslty
+SUPABASE_ACCESS_TOKEN=
+SUPABASE_PROJECT_REF=
